--- a/project/main.html
+++ b/project/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Главная страница</title>
+    <title>Главная страница а тут?</title>
 </head>
 <body>
 
